# yolofarm---group-6---L05---HK252

./: .gitignore  README.md  docker-compose.yml  humidity-20260512-0407.json  import_humidity.py  package.json  pnpm-lock.yaml
ai-forecast/: .env.example  ARCH.md  Dockerfile  README.md  main.py  pyproject.toml
ai-forecast/artifacts/models/: humidity_gru.pt
ai-forecast/migrations/: 001_init_forecast_schema.sql
ai-forecast/notebooks/: cloud_forecast_runner.ipynb
ai-forecast/scripts/: serve_local.sh  train_local.sh
ai-forecast/src/: config.py
ai-forecast/src/api/: main.py  routes.py  security.py
ai-forecast/src/api/routers/: disease.py  drift.py  evaluation.py  forecast.py  model_registry.py  train.py
ai-forecast/src/config/: settings.py
ai-forecast/src/data/: loader.py
ai-forecast/src/data/connectors/: mysql_source.py  timescale_store.py
ai-forecast/src/data/pipelines/: build_features.py  make_infer_dataset.py  make_train_dataset.py
ai-forecast/src/features/: lag_features.py  scaling.py  time_features.py  weather_features.py
ai-forecast/src/model/: predict.py
ai-forecast/src/models/baselines/: linear.py  naive.py
ai-forecast/src/models/evaluation/: evaluator.py
ai-forecast/src/models/inference/: predict.py
ai-forecast/src/models/training/: train_rnn.py  tune_rnn.py
ai-forecast/src/monitoring/: drift_monitor.py
ai-forecast/tests/unit/: test_health_contract.md  test_preprocess_pipeline.py
client/: Dockerfile  index.html  (+2 more)
server/AI_feature/ai-forecast/: Dockerfile  README.md  humidity.json  import_humidity.py  pyproject.toml
(+186 files in other folders)
