[project]
name = "ai-forecast"
version = "0.1.0"
description = "Humidity forecasting service for YoloFarm"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "python-dotenv>=1.0.1",
  "numpy>=1.26.0",
  "pandas>=2.2.0",
  "torch>=2.3.0",
  "scikit-learn>=1.3.0",
  "mysql-connector-python>=9.0.0",
  "psycopg[binary]>=3.2.0",
  "pytest>=8.3.0",
]

[tool.uvicorn]
factory = false
app = "src.api.main:app"
host = "0.0.0.0"
port = 8000
reload = true
